# fantasy-forge

./: .env.example  .envrc  .gitignore  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
config/: seaborn.py
dbt/: dbt_project.yml  package-lock.yml  profiles.yml
dbt/macros/utils/: generate_schema_name.sql
dbt/models/: _groups.yml
dbt/models/analytics/: position_starter_stats.sql
dbt/models/core/: _schema.yml  dim_games.sql  dim_players.sql  dim_teams.sql  fct_player_game_stats.sql
dbt/models/sources/: nflverse.yml
dbt/models/staging/: _schema.yml  stg_nflverse__ff_playerids.sql  stg_nflverse__play_by_plays.sql  stg_nflverse__player_stats.sql  stg_nflverse__players.sql  stg_nflverse__schedules.sql  stg_nflverse__snap_counts.sql  stg_nflverse__team_stats.sql  stg_nflverse__teams.sql
ff_platform/: __init__.py  definitions.py
ff_platform/assets/: __init__.py  dbt_assets.py  nfl_data.py
ff_platform/resources/: __init__.py  dbt_project.py  duckdb.py
notebooks/: example_connect.ipynb  explore.ipynb
notebooks/exploratory/: snap_count_baselins.ipynb
scripts/: init_db.py
